syntax = "proto3";

option go_package = "./protoc";

message Message {
  string id = 1;
  string payload = 2;
  int64 timestamp = 3;
}

service BrokerService {
  rpc CreateQueue(CreateQueueRequest) returns (CreateQueueResponse);
  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}

message CreateQueueRequest{
  string name = 1;
}

message CreateQueueResponse{
  string status = 1;
}

message PublishRequest {
  string queue = 1;
  Message message = 2;
}

message PublishResponse {
  string status = 1;
}

message SubscribeRequest {
  string queue = 1;
}

message SubscribeResponse {
  Message message = 1;
}
